fixed overflow

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -314,8 +314,10 @@ nav li a.connect {
   }
 
   .image-box {
-    padding: 16px;
+    width: 100%;
+    max-width: 400px;
   }
+  
 
   .image-box img {
     width: 100%;
@@ -356,6 +358,8 @@ nav li a.connect {
   nav li a {
     font-size: 24px;
   }
+
+  
 
   .image-box {
     padding: 8px;
